--- a/src/VotesRoot.css
+++ b/src/VotesRoot.css
@@ -1,12 +1,18 @@
 .container {
   display: grid;
-  height: 100vh;
-  grid-template-columns: repeat(11, [col-start] 1fr) 200px;
+  /* grid-template-columns: repeat(11, [col-start] 1fr) 200px; */
+  grid-template-columns: 100vw;
   grid-template-rows: 40px 1fr;
 }
 
+@media only screen and (min-width: 900px) {
+  .container {
+    height: 100vh;
+  }
+}
+
 .header {
-  grid-column: col-start / span 12;
+  grid-column: 1;
   background-color: black;
   position: sticky;
   top: 0;
@@ -15,18 +21,32 @@
   z-index: 999;
 }
 
-.one {
-  grid-column: 1 / span 9;
-  overflow: scroll;
+.pageGrid {
+  height: inherit;
+  display: grid;
+  /* grid-template-columns: repeat(11, [col-start] 1fr) 200px; */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.full {
-  grid-column: 1 / span 12;
-  overflow: scroll;
+.one {
+  min-height: 80vh;
 }
 
 .two {
-  grid-column: 10 / span 3;
   padding: 5px 15px;
+}
+
+@media only screen and (min-width: 900px) {
+  .one {
+    grid-column: span 2;
+  }
+  .two {
+    grid-column: span 1;
+    overflow: scroll;
+  }
+}
+
+.full {
+  grid-column: span 10;
   overflow: scroll;
 }
