--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -5,6 +5,7 @@
   left: 0px;
   top: 40px;
   width: 100vw;
+  padding: 10px 0px 10px 0px;
 }
 
 @media only screen and (min-width: 900px) {
@@ -13,6 +14,7 @@
     background-color: #000;
     top: 0px;
     width: auto;
+    padding: 0;
   }
 }
 
