--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -5,6 +5,7 @@
   left: 0px;
   top: 40px;
   width: 100vw;
+  padding: 10px 0px 10px 0px;
 }
 
 @media only screen and (min-width: 900px) {
@@ -13,6 +14,7 @@
     background-color: #000;
     top: 0px;
     width: auto;
+    padding: 0;
   }
 }
 
@@ -27,19 +29,19 @@ li {
   display: block;
   color: white;
   text-align: left;
-  padding: 8px 16px;
+  padding: 8px 0px;
   width: 90vw;
   font-size: 16px;
   text-decoration: none;
   cursor: pointer;
+  margin: auto
 }
 
 @media only screen and (min-width: 900px) {
   li {
     float: left;
-    font-size: 12px;
     text-align: center;
-    padding: 4px 16px;
+    padding: 0px 16px;
     width: auto;
   }
 }
