--- a/src/VotesRoot.css
+++ b/src/VotesRoot.css
@@ -2,7 +2,7 @@
   display: grid;
   /* grid-template-columns: repeat(11, [col-start] 1fr) 200px; */
   grid-template-columns: 100vw;
-  grid-template-rows: 40px minmax(0, 1fr);
+  grid-template-rows: 56px minmax(0, 1fr);
 }
 
 @media only screen and (min-width: 900px) {
@@ -21,7 +21,13 @@
   z-index: 999;
   font-size: 18px;
   line-height: 1;
+  /* display: inline; */
 }
+
+.header img, .header svg {
+  display: inline;
+}
+
 
 .headerLogo {
   position: relative;
@@ -50,7 +56,7 @@
 }
 
 #regionSummaryName {
-  scroll-margin-top: 40px;
+  scroll-margin-top: 60px;
 }
 
 @media only screen and (min-width: 900px) {
